foot4 nowrap correction

--- a/css/main.css
+++ b/css/main.css
@@ -429,6 +429,7 @@ footer{
     color: #DDDDDD;
     display: block;
     font-weight: 500;
+    white-space: nowrap;
 }
 .foot4-line1{
     display: block;
